<resources>
    <string name="app_name">LearnPenguin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="learn">Learn</string>
    <string name="penguin">Penguin</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retypePass">Retype Password</string>
    <string name="create_account">Create Account</string>
    <string name="signIn_Ask">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="signUp_Ask">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="send">Send</string>
    <string name="email_Ask">Please enter your email</string>
    <string name="ask_Desc">We will send a reset password link to your registered email</string>
    <string name="username_blank">Please enter username.</string>
    <string name="username_More50">Username not more than 50 character.</string>
    <string name="email_blank">Please enter email.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="retyePass_notSame">Not same with password.</string>
    <string name="my_collection">My Collection</string>
    <string name="role">Role</string>
    <string name="logout">Log Out</string>
    <string name="courses">Courses</string>
    <string name="quiz">Quiz</string>
    <string name="main">Main</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="collection">Collection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">See All</string>
    <string name="rename">Rename</string>
    <string name="change_username">Change Username</string>
    <string name="api_key">AIzaSyA1C0bmCHnh19A-PjByYhmJ-pnaXVcIJ90</string>
    <string name="favourite_news">Favourite News</string>
    <string name="faq">FAQ</string>
    <string name="contents">Contents</string>
    <string name="overview">Overview</string>
    <string name="latest_news">Latest News</string>
    <string name="see_all_main"><![CDATA[See All >]]></string>
    <string name="favourite">Favourite</string>
    <string name="return_to_quiz_menu">Return to Quiz Menu</string>
    <string name="learn_penguin">LearnPenguin</string>
</resources>