<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/courseFragment"
        android:icon="@drawable/book"
        android:title="@string/courses" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/edit"
        android:title="@string/quiz" />

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/news" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account"
        android:title="@string/profile"
        />

</menu>