<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="bigboss.team.learnpenguin.ui.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="bigboss.team.learnpenguin.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="bigboss.team.learnpenguin.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>