<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/penguin_logo" />

    <TextView
        android:id="@+id/appName_Learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:text="@string/learn"
        android:textAlignment="textEnd"
        android:textColor="#666464"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/appName_Penguin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/penguin"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appName_Learn" />

    <EditText
        android:id="@+id/input_Username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/account"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName_Penguin" />

    <ImageView
        android:id="@+id/line_username"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_Username"
        app:layout_constraintStart_toStartOf="@+id/input_Username"
        app:layout_constraintTop_toTopOf="@+id/input_Username"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/error_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="@+id/input_Username"
        app:layout_constraintTop_toBottomOf="@+id/input_Username" />

    <EditText
        android:id="@+id/input_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_Username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_Username"
        app:layout_constraintTop_toBottomOf="@+id/input_Username" />

    <ImageView
        android:id="@+id/line_email"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_Email"
        app:layout_constraintStart_toStartOf="@+id/input_Email"
        app:layout_constraintTop_toTopOf="@+id/input_Email"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/error_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintStart_toEndOf="@+id/line_email"
        app:layout_constraintTop_toBottomOf="@+id/input_Email" />

    <EditText
        android:id="@+id/input_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_Email"
        app:layout_constraintStart_toStartOf="@+id/input_Email"
        app:layout_constraintTop_toBottomOf="@+id/input_Email" />

    <ImageView
        android:id="@+id/line_password"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_Password"
        app:layout_constraintStart_toStartOf="@+id/input_Password"
        app:layout_constraintTop_toTopOf="@+id/input_Password"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/error_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintStart_toEndOf="@+id/line_password"
        app:layout_constraintTop_toBottomOf="@+id/input_Password" />

    <EditText
        android:id="@+id/input_RetypePass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/retypePass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_Password"
        app:layout_constraintStart_toStartOf="@+id/input_Password"
        app:layout_constraintTop_toBottomOf="@+id/input_Password" />

    <ImageView
        android:id="@+id/line_retypePass"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_RetypePass"
        app:layout_constraintStart_toStartOf="@+id/input_RetypePass"
        app:layout_constraintTop_toTopOf="@+id/input_RetypePass"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/error_RetypePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintStart_toEndOf="@+id/line_retypePass"
        app:layout_constraintTop_toBottomOf="@+id/input_RetypePass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Register"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_yellow"
        android:text="@string/create_account"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/input_RetypePass"
        app:layout_constraintStart_toStartOf="@+id/input_RetypePass"
        app:layout_constraintTop_toBottomOf="@+id/input_RetypePass" />

    <TextView
        android:id="@+id/txt_loginAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/signIn_Ask"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Register" />

    <TextView
        android:id="@+id/txtbtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:clickable="true"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_loginAsk"
        tools:ignore="TouchTargetSizeCheck"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>