<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.FragmentRename"
    android:background="#D7F1F3">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/change_username"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_Username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/account"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/line_username"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_Username"
        app:layout_constraintStart_toStartOf="@+id/input_Username"
        app:layout_constraintTop_toTopOf="@+id/input_Username"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/error_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="@+id/input_Username"
        app:layout_constraintTop_toBottomOf="@+id/input_Username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_yellow"
        android:text="@string/rename"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/input_Username"
        app:layout_constraintStart_toStartOf="@+id/input_Username"
        app:layout_constraintTop_toBottomOf="@+id/input_Username" />

</androidx.constraintlayout.widget.ConstraintLayout>